src/test/deca/context/invalid/class/instance/new_int.deca
// Description:
//    Création d'une instance d'entier
//
// Resultats:
//    undefined class int

{
	int a = new int();
}

